# AutoSo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: llm_instruction.md
data/betul/: betul_chunks.json  betul_transcript.json
data/ezgi/: ezgi_chunks.json  ezgi_transcript.json
data/hilal/: hilal_chunks.json  hilal_transcript.json
data/nehir/: nehir_chunks.json  nehir_transcript.json
data/yasin/: yasin_chunks.json  yasin_transcript.json
docs/: chunk_approach.md  navigation_decisions.md  realtime_streaming_asr_stt.md  similarity_algorithms.md  transcript_approach.md
docs/tr_docs/: benzerlik_algoritmalari.md  gercek_zamanli_akis_gkt_sy.md  navigasyon_kararlari.md  parca_yaklasimi.md  transkript_yaklasimi.md
models/: models_readme.md
src/autoso/: app.py  chunk_generator.py  speech_matcher.py  transcript_generator.py
src/autoso/similarity/: phonetic.py  semantic.py
