[project]
name = "autoso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastnanoid>=0.4.1",
    "instructor>=1.8.3",
    "jellyfish>=1.2.0",
    "joblib>=1.5.1",
    "keyboard>=0.13.5",
    "litellm>=1.72.6",
    "model2vec>=0.6.0",
    "numpy>=2.3.0",
    "orjson>=3.10.18",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=4.1.0",
    "sounddevice>=0.5.2",
    "ujson>=5.10.0",
    "vosk>=0.3.45",
    "webrtcvad-wheels>=2.0.14",
]
